# copi

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  USAGE_EXAMPLES.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/modules/: clipboard.rs  mod.rs  sync.rs
