[package]
name = "copi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "copi"
path = "src/main.rs"

[dependencies]
arboard = "3.4"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
base64 = "0.22"
image = "0.25"
